[package]
name = "bunkiller"
version = "0.1.0"
edition = "2021"

[dependencies]

[profile.dev]
overflow-checks = false
opt-level = 3
strip = true

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
debug = 0
debug-assertions = false
panic = "abort"
incremental = false
